<resources>
    <string name="app_name">StudentAttendance</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="msg_username_password_error">Please check username or password</string>
    <string name="msg_max_attempt_error">You have exceeded MAX attempt</string>
    <string name="msg_login_success">Login successful</string>
</resources>